# BizLens-Data-Analysis-Agent-1.0.0

./: .env.example  .gitignore  Dockerfile.backend  Dockerfile.frontend  Dockerfile.mcp  README.md  docker-compose.yml  pyproject.toml  requirements.txt
Project_Review/数据分析测试用例/: channel_roi_2024h1.xlsx  product_usage_analytics.xlsx  sales_q3_2024.xlsx  startup_finance_2024.xlsx  测试问题.md
Project_Review/检索知识库/: 华南SaaS市场竞争格局分析.md  小红书商业化白皮书.md
agents/: __init__.py  code_interpreter.py  graph.py  insight.py  planner.py  visualization.py
backend/: config.py  llm_client.py  main.py  requirements.txt
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  App.tsx  index.css  plotly.d.ts  types.ts
frontend/src/components/: AnalysisInput.tsx  FileUpload.tsx  KnowledgePanel.tsx  ProgressBar.tsx  ReportView.tsx
knowledge_base/: 2024数字广告趋势报告.md  SaaS用户留存基准报告2024.md  SaaS财务基准报告2024.md  云计算成本优化方案对比.md  产品运营复盘-功能C转化分析.md  创业公司融资节奏指南.md  竞品动态报告_2024Q3.md
mcp_client/: __init__.py  knowledge_client.py
mcp_knowledge_agent/: __init__.py  __main__.py  server.py
mcp_knowledge_agent/core/: __init__.py  config.py  loader.py  vector_pipeline.py
mcp_knowledge_agent/tools/: __init__.py  answer.py  document.py  evaluate.py  manage.py  schemas.py  search.py
sandbox/: Dockerfile  __init__.py  docker_executor.py  executor.py  subprocess_executor.py
tests/: test_mcp_integration.py
