[project]
name = "mcp-knowledge-agent"
version = "0.1.0"
description = "MCP Knowledge Agent Server — 把 AI Research Copilot 的 RAG 检索管线封装为 MCP 协议 Server"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "pydantic>=2.0.0",
    "chromadb>=0.5.0",
    "sentence-transformers>=2.0.0",
    "rank-bm25>=0.2.2",
    "jieba>=0.42.1",
    "PyPDF2>=3.0.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "openai>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[build-system]
requires = ["setuptools>=75.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["mcp_knowledge_agent*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
